--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8d72e0c5",
+   "id": "ba3de0fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "af6a60fd",
+   "id": "84002b2a",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4839dbf7",
+   "id": "0b05a753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0ffdbc75",
+   "id": "1799c865",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "37af8647",
+   "id": "0f59ee28",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2c5fb6ae",
+   "id": "63117ec2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "29c28528",
+   "id": "b3754b94",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4536212b",
+   "id": "45711564",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c38b1bdc",
+   "id": "7e0a072d",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "05e7aaf1",
+   "id": "61cf9ef0",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5f88b657",
+   "id": "56e9e1f3",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "851fa070",
+   "id": "303b5e1c",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b4bbb0ec",
+   "id": "0e3141fc",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "eb35a287",
+   "id": "d670718e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ca50e54d",
+   "id": "a5349b83",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf57c555",
+   "id": "ab9c4d64",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5c35a5f",
+   "id": "3b598a6d",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d17d907c",
+   "id": "f4d2b28d",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4b402c03",
+   "id": "aed2d075",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e231509",
+   "id": "a3a57048",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0966cea0",
+   "id": "f691bb28",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "046955ef",
+   "id": "b47f1eaf",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "cbfcadfd",
+   "id": "26145588",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef409abb",
+   "id": "e1191f72",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -461,40 +461,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "a2460755",
+   "execution_count": 69,
+   "id": "473f720e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Matthieu': '06xxxxxx', 'Antoine': '07xxxxxxx'}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'Mathieu'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [67], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m mon_dict \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMatthieu\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m06xxxxxx\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAntoine\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m07xxxxxxx\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(mon_dict)\n\u001b[0;32m----> 3\u001b[0m mon_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMathieu\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Mathieu'"
+      "{'Matthieu': '07xxxxx', 'Antoine': '07xxxxxxx', 'Nicolas': '06xxxxxx'}\n"
      ]
     }
    ],
    "source": [
     "mon_dict = {\"Matthieu\": \"06xxxxxx\", \"Antoine\": \"07xxxxxxx\"}\n",
-    "mon_dict[\"\"]\n",
+    "mon_dict[\"Nicolas\"] = \"06xxxxxx\"\n",
+    "mon_dict[\"Matthieu\"] = \"07xxxxx\"\n",
     "print(mon_dict)\n",
-    "mon_dict[\"Mathieu\"]"
+    "#mon_dict[\"Mathieu\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3079ddde",
+   "id": "8ac448ce",
    "metadata": {},
    "outputs": [],
    "source": []
