--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f8831d0",
+   "id": "78de5862",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "702449ef",
+   "id": "c8b2e646",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "45918efd",
+   "id": "af36b0b9",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f64c028b",
+   "id": "7f22db46",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0f9cc729",
+   "id": "420bc100",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f45b502b",
+   "id": "5ea2e9cc",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "eafbcd87",
+   "id": "53546752",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ce60039d",
+   "id": "ceb65227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "002837e7",
+   "id": "129cf318",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -219,12 +219,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31a78e43",
+   "cell_type": "markdown",
+   "id": "3cda18ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Mercredi\n",
+    "\n",
+    "## Matin \n",
+    "\n",
+    "* boucle while \n",
+    "* les context managers (`with`) pour l'ouverture de fichiers  "
+   ]
   }
  ],
  "metadata": {
