--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78de5862",
+   "id": "8160b9e7",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c8b2e646",
+   "id": "fbea0080",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "af36b0b9",
+   "id": "dc90bd00",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7f22db46",
+   "id": "8f15530f",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "420bc100",
+   "id": "59022d93",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5ea2e9cc",
+   "id": "3573dd63",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "53546752",
+   "id": "89f784e4",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ceb65227",
+   "id": "30569ecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129cf318",
+   "id": "374b3c3a",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cda18ac",
+   "id": "48c295c7",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -228,7 +228,8 @@
     "## Matin \n",
     "\n",
     "* boucle while \n",
-    "* les context managers (`with`) pour l'ouverture de fichiers  "
+    "* les context managers (`with`) pour l'ouverture de fichiers (et bien d'autres) : https://realpython.com/python-with-statement/ \n",
+    "* "
    ]
   }
  ],
