--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8160b9e7",
+   "id": "d58c1138",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "fbea0080",
+   "id": "1974848b",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "dc90bd00",
+   "id": "1d187228",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8f15530f",
+   "id": "70e1c9b9",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "59022d93",
+   "id": "dce0d702",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3573dd63",
+   "id": "b2ab5986",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "89f784e4",
+   "id": "9071efcb",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "30569ecd",
+   "id": "04f2b6e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "374b3c3a",
+   "id": "8c1469bd",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48c295c7",
+   "id": "03aa336f",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -229,6 +229,7 @@
     "\n",
     "* boucle while \n",
     "* les context managers (`with`) pour l'ouverture de fichiers (et bien d'autres) : https://realpython.com/python-with-statement/ \n",
+    "* fonctions `lambda` (création de fonctions anonymes)\n",
     "* "
    ]
   }
