--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d58c1138",
+   "id": "600a6088",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1974848b",
+   "id": "e49a09de",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1d187228",
+   "id": "37cdd3fc",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "70e1c9b9",
+   "id": "e4812b8d",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "dce0d702",
+   "id": "6011b34d",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b2ab5986",
+   "id": "0b99b6b8",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9071efcb",
+   "id": "9da0c350",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "04f2b6e6",
+   "id": "4c585f38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c1469bd",
+   "id": "c3f99b83",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03aa336f",
+   "id": "67fb6f28",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -230,7 +230,10 @@
     "* boucle while \n",
     "* les context managers (`with`) pour l'ouverture de fichiers (et bien d'autres) : https://realpython.com/python-with-statement/ \n",
     "* fonctions `lambda` (création de fonctions anonymes)\n",
-    "* "
+    "* exceptions :\n",
+    "    * `try` : le code qui peut créer une erreur \n",
+    "    * `except` : le code qui gèe l'erreur levée dans le try => ATTENTION : il faut TOUJOURS préciser quelle exception on veut gérer\n",
+    "    * `fina"
    ]
   }
  ],
