--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "600a6088",
+   "id": "42065a16",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e49a09de",
+   "id": "4c5837ee",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "37cdd3fc",
+   "id": "15a9327b",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e4812b8d",
+   "id": "eaa4a9b2",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6011b34d",
+   "id": "0b3e6db4",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0b99b6b8",
+   "id": "fd51ef94",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9da0c350",
+   "id": "86025b18",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4c585f38",
+   "id": "6ec83401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3f99b83",
+   "id": "5a703171",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67fb6f28",
+   "id": "7a877acf",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -233,8 +233,20 @@
     "* exceptions :\n",
     "    * `try` : le code qui peut créer une erreur \n",
     "    * `except` : le code qui gèe l'erreur levée dans le try => ATTENTION : il faut TOUJOURS préciser quelle exception on veut gérer\n",
-    "    * `fina"
+    "    * `finally` : \n",
+    "    * `else` : \n",
+    "    * il y a une hierarchie d'exception, quand on en capture une on capture également toutes celles en dessous \n",
+    "    \n",
+    "(https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exception_hierarchy.png)[]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f95149d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
