--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "42065a16",
+   "id": "b60ffd1f",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4c5837ee",
+   "id": "b068df0b",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "15a9327b",
+   "id": "c106b684",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "eaa4a9b2",
+   "id": "37a98112",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0b3e6db4",
+   "id": "7ce87645",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "fd51ef94",
+   "id": "67932b8b",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "86025b18",
+   "id": "c7628abf",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "6ec83401",
+   "id": "1c35c0b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a703171",
+   "id": "22c748ca",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a877acf",
+   "id": "04f91e2f",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -236,6 +236,10 @@
     "    * `finally` : \n",
     "    * `else` : \n",
     "    * il y a une hierarchie d'exception, quand on en capture une on capture également toutes celles en dessous \n",
+    "* types : \n",
+    "    * listes : mutables (on peut la modifier une fois qu'elle est créée)\n",
+    "    * tuples : immutables (on ne peut pas le modifier)\n",
+    "    * dictionnaires : \n",
     "    \n",
     "(https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exception_hierarchy.png)[]"
    ]
@@ -243,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f95149d1",
+   "id": "8b1bea3a",
    "metadata": {},
    "outputs": [],
    "source": []
