--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b60ffd1f",
+   "id": "8588eee8",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b068df0b",
+   "id": "3fd72063",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c106b684",
+   "id": "51e98363",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "37a98112",
+   "id": "8c20a0c6",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7ce87645",
+   "id": "7aa0a259",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "67932b8b",
+   "id": "d6cab1d2",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "c7628abf",
+   "id": "51d2b562",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "1c35c0b7",
+   "id": "3a4f938b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22c748ca",
+   "id": "a921f3e0",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04f91e2f",
+   "id": "e9f90959",
    "metadata": {},
    "source": [
     "# Mercredi\n",
@@ -240,6 +240,9 @@
     "    * listes : mutables (on peut la modifier une fois qu'elle est créée)\n",
     "    * tuples : immutables (on ne peut pas le modifier)\n",
     "    * dictionnaires : \n",
+    "        * permettent de stocker des clés avec des valeurs associées\n",
+    "        * les clés ne peuvent pas être dupliquées\n",
+    "        * la recherche d'une clé dans un dictionnaire est \"facile / rapide\" car il possède une structure inerne \n",
     "    \n",
     "(https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exception_hierarchy.png)[]"
    ]
@@ -247,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b1bea3a",
+   "id": "f62bb146",
    "metadata": {},
    "outputs": [],
    "source": []
