--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ba3de0fc",
+   "id": "cd47340c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "84002b2a",
+   "id": "eb8c79ae",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0b05a753",
+   "id": "c329aeb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1799c865",
+   "id": "20aaf561",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0f59ee28",
+   "id": "28f9d4a7",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "63117ec2",
+   "id": "5f5ed04f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b3754b94",
+   "id": "e740c5e9",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "45711564",
+   "id": "9fe63157",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7e0a072d",
+   "id": "8b816cce",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "61cf9ef0",
+   "id": "88ff567d",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "56e9e1f3",
+   "id": "285d3790",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "303b5e1c",
+   "id": "fd0a60e2",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0e3141fc",
+   "id": "b507e565",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "d670718e",
+   "id": "4e24dbad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "a5349b83",
+   "id": "cfeaacf2",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab9c4d64",
+   "id": "e69ec5e7",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b598a6d",
+   "id": "24e2b91e",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f4d2b28d",
+   "id": "a91ab523",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "aed2d075",
+   "id": "a3226e17",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3a57048",
+   "id": "e44200a2",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f691bb28",
+   "id": "0e4e085f",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b47f1eaf",
+   "id": "c44c33d4",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "26145588",
+   "id": "af3abfda",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1191f72",
+   "id": "aa205abf",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -461,15 +461,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "473f720e",
+   "execution_count": 70,
+   "id": "02f67e9f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Matthieu': '07xxxxx', 'Antoine': '07xxxxxxx', 'Nicolas': '06xxxxxx'}\n"
+      "{'Matthieu': '07xxxxx', 'Antoine': '07xxxxxxx', 'Nicolas': '06xxxxxx', 1: [1, 2, 3]}\n"
      ]
     }
    ],
@@ -477,16 +477,15 @@
     "mon_dict = {\"Matthieu\": \"06xxxxxx\", \"Antoine\": \"07xxxxxxx\"}\n",
     "mon_dict[\"Nicolas\"] = \"06xxxxxx\"\n",
     "mon_dict[\"Matthieu\"] = \"07xxxxx\"\n",
+    "mon_dict[1] = [1, 2, 3]\n",
     "print(mon_dict)\n",
     "#mon_dict[\"Mathieu\"]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ac448ce",
+   "cell_type": "markdown",
+   "id": "44b23683",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
